# Camera_based_Cone_Detection

./: CMakeLists.txt  CUDA_ARCHITECTURE_DEEP_DIVE.md  README.md  STATUS_AND_TESTING.md  foxglove_layout.json  package.xml
docs/: architecture.md  concurrency.md  cuda_optimizations.md
include/: camera_perception_pipeline.hpp  camera_pipeline_config.hpp  camera_visualization_bridge.hpp  detected_cone.hpp  yolo26_tensorrt.hpp  zed_perception_node.hpp
include/zed_fusion_perception/: detected_cone.hpp  yolo26_tensorrt.hpp  zed_perception_node.hpp
launch/: perception_launch.py  test_detection_launch.py
scripts/: analyze_performance.py  benchmark_pytorch.py  compare_performance.py  extract_frames.py  pytorch_perception_node.py  run_benchmarks.py
src/: camera_perception_pipeline.cpp  camera_visualization_bridge.cpp  cuda_kernels.cu  main.cpp  test_video.cpp  test_yolo_standalone.cpp  yolo26_tensorrt.cpp  zed_perception_node.cpp
